--- a/basroba/app/templates/cart.html
+++ b/basroba/app/templates/cart.html
@@ -14,24 +14,23 @@
 
     <div class="container">
         <div class="cart-items">
-            <h1>კალათა ()</h1>
+            <h1>კალათა ({{ cart_items.count }})</h1>
             {% for item in cart_items %}
                 <div class="cart-item">
                     <div class="item-image">
                         <img src="{{ item.Item.Product_image1.url }}" alt="Item">
                     </div>
                     <div class="item-details">
-                        <span class="item-name">{{ item.Item.Product_name }}</span>
-                        <span class="item-price">₾{{ item.Item.Product_price }}</span>
+                        <span class="item-name">{{ item }}</span>
+                        <span class="item-price">₾{{ item.Item.Product_price_new }}</span>
                     </div>
                     <div class="quantity">
-                        <button class="btn-decrease">-</button>
-                        <input type="number" value="2" class="quantity-input">
-                        <button class="btn-increase">+</button>
+                        <button class="btn-decrease" type="button">-</button>
+                        <input type="number" value="{{ item.count }}" class="quantity-input" max="9" min="1" readonly>
+                        <button class="btn-increase" type="button">+</button>
                     </div>
                 </div>
             {% endfor %}
-            <!-- Repeat .cart-item for more items -->
         </div>
 
         <div class="order-summary">
@@ -54,4 +53,29 @@
     </div>
 
     <br>
+
+    <script>
+        const decreaseButtons = document.querySelectorAll('.btn-decrease');
+        const increaseButtons = document.querySelectorAll('.btn-increase');
+
+        decreaseButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                const quantityInput = button.nextElementSibling;
+                let currentValue = parseInt(quantityInput.value);
+                if (currentValue > 1) {
+                    quantityInput.value = currentValue - 1;
+                }
+            });
+        });
+
+        increaseButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                const quantityInput = button.previousElementSibling;
+                let currentValue = parseInt(quantityInput.value);
+                if (currentValue < 9) {
+                    quantityInput.value = currentValue + 1;
+                }
+            });
+        });
+    </script>
 {% endblock %}
