--- a/basroba/app/templates/cart.html
+++ b/basroba/app/templates/cart.html
@@ -23,6 +23,7 @@
                 <div class="item-details">
                     <span class="item-name">{{ item.Item.Product_name }}</span>
                     <span class="item-price">₾{{ item.Item.Product_price_new }}</span>
+                    <span class="item-price">Color: {{ item.Item.Product_color }} Size: {{ item.Item.Product_size }}</span>
                 </div>
                 <div class="quantity">
                     <button class="btn-decrease" type="button">-</button>
