--- a/basroba/app/templates/cart.html
+++ b/basroba/app/templates/cart.html
@@ -34,7 +34,7 @@
             </div>
         </a>
         {% empty %}
-            <p>თქვენი კალათა ცარიელია.</p>
+            <p style="color: white; text-align: center;">თქვენი კალათა ცარიელია.</p>
         {% endfor %}
     </div>
 
