--- a/basroba/app/templates/product.html
+++ b/basroba/app/templates/product.html
@@ -25,7 +25,6 @@
         }
         #message-bar.success { background: green; }
         #message-bar.error { background: crimson; }
-        .rating-div svg { margin-right: 2px; }
     </style>
 {% endblock %}
 
@@ -65,45 +64,11 @@
 
         <h1 class="payment-method">{{ product.product_description }}</h1>
 
-        <!-- Ratings -->
-        <div class="rating-div">
-            {% with full_stars=product.Product_rating|floatformat:1|slice:":1" %}
-            {% with rating=product.Product_rating|floatformat:1 %}
-                {% for i in "12345"|make_list %}
-                    {% if i|add:"0" <= rating|floatformat:0 %}
-                        <!-- Full star -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="gold" viewBox="0 0 16 16">
-                            <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765
-                                     c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792
-                                     c.197-.39.73-.39.927 0l2.184 4.327
-                                     4.898.696c.441.062.612.636.282.95l-3.522 3.356
-                                     .83 4.73c.078.443-.36.79-.746.592L8
-                                     13.187l-4.389 2.256z"/>
-                        </svg>
-                    {% elif i|add:"-1" < rating and rating < i %}
-                        <!-- Half star -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 16 16">
-                            <path fill="gold" d="M8 12.472l3.717 1.962-.71-4.137 3.007-2.931-4.151-.602L8 3.5v8.972z"/>
-                            <path fill="lightgray" d="M8 12.472l-3.717 1.962.71-4.137L2 7.366l4.151-.602L8 3.5v8.972z"/>
-                        </svg>
-                    {% else %}
-                        <!-- Empty star -->
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="lightgray" viewBox="0 0 16 16">
-                            <path d="M2.866 14.85c-.079.444.36.791.746.593l4.389-2.256
-                                     4.389 2.256c.386.198.824-.149.746-.592l-.83-4.73
-                                     3.522-3.356c.33-.314.159-.888-.282-.95l-4.898-.696
-                                     L8.465.792a.513.513 0 0 0-.927 0L5.354
-                                     5.12l-4.898.696c-.441.062-.612.636-.282.95l3.522
-                                     3.356-.83 4.73z"/>
-                        </svg>
-                    {% endif %}
-                {% endfor %}
-            {% endwith %}
-            {% endwith %}
-            <h1 class="rating-text">{{ product.Product_rating }} შეფასება</h1>
-        </div>
+        <br>
 
         <hr class="main-part-line">
+
+        <br>
 
         <!-- Colors -->
         <div class="color-picker">
@@ -272,11 +237,14 @@ updateButtons();
 document.querySelectorAll('.other-image').forEach(img => {
     img.addEventListener('click', () => {
         const mainImg = document.querySelector('.main-picture');
+
+        // Swap src values
         const tempSrc = mainImg.src;
         mainImg.src = img.src;
         img.src = tempSrc;
     });
 });
+
 </script>
 
 {% endblock %}
