--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -21,12 +21,12 @@
         <div class="main-part">
             <div class="main-part1" id="main-part1" style="display: none;">
                 <h1>Profile Information</h1>
-                <input type="text" placeholder="First Name">
-                <input type="text" placeholder="Middle Name">
-                <input type="text" placeholder="Last Name">
-                <input type="number" placeholder="Id Number">
-                <input type="email" placeholder="Email Address">
-                <input type="number" placeholder="Phone Number">
+                <input type="text" placeholder="First Name" value="{{ user_info.first_name }}">
+                <input type="text" placeholder="Middle Name" value="{{ user_info.middle_name }}">
+                <input type="text" placeholder="Last Name" value="{{ user_info.last_name }}">
+                <input type="number" placeholder="Id Number" value="{{ user_info.id_number }}">
+                <input type="email" placeholder="Email Address" value="{{ user_info.email_address }}">
+                <input type="number" placeholder="Phone Number" value="{{ user_info.phone_number }}">
 
                 <button type="submit">Save</button>
             </div>
