--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -14,8 +14,8 @@
         <div class="sidebar">
             <h1>Username here</h1>
             <a onclick="open_part1()" style="cursor: pointer;">Profile Information</a>
-            <a onclick="open_part2()" style="cursor: pointer;">Orders</a>
-            <a onclick="open_part3()" style="cursor: pointer;">Address Information</a>
+            <a onclick="open_part3()" style="cursor: pointer;">Orders</a>
+            <a onclick="open_part2()" style="cursor: pointer;">Address Information</a>
         </div>
 
         <div class="main-part">
@@ -45,29 +45,18 @@
             <div class="main-part3" id="main-part3" style="display: none;">
                 <h1>Orders</h1>
 
+                {% for order in order_info %}
                 <div class="order">
-                    <h1>Order #121412</h1>
+                    <h1>Order #{{ order.id }}</h1>
 
-                    <div class="order-item">
-                        <img src="" alt="">
-                        <h1>Large Red T-shirt</h1>
-                    </div>
-
-                    <div class="order-item">
-                        <img src="" alt="">
-                        <h1>Large Red T-shirt</h1>
-                    </div>
-
-                    <div class="order-item">
-                        <img src="" alt="">
-                        <h1>Large Red T-shirt</h1>
-                    </div>
-
-                    <div class="order-item">
-                        <img src="" alt="">
-                        <h1>Large Red T-shirt</h1>
-                    </div>
+                    {% for item in order.items.all %}
+                        <div class="order-item">
+                            <img src="{{ item.Item.Product_image1.url }}" alt="">
+                            <h1>{{ item.Item.Product_name }}</h1>
+                        </div>
+                    {% endfor %}
                 </div>
+                {% endfor %}
             </div>
         </div>
     </div>
