--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -19,18 +19,17 @@
 
     <!-- Main Content -->
     <div class="main-part">
-        <!-- Profile Information -->
         <div class="main-part1 card" id="main-part1" style="display: none;">
             <h1>Profile Information</h1>
-            <form>
-                <input type="text" placeholder="First Name" value="{{ user_info.first_name }}">
-                <input type="text" placeholder="Middle Name" value="{{ user_info.middle_name }}">
-                <input type="text" placeholder="Last Name" value="{{ user_info.last_name }}">
-                <input type="number" placeholder="Id Number" value="{{ user_info.id_number }}">
-                <input type="email" placeholder="Email Address" value="{{ user_info.email_address }}">
-                <input type="number" placeholder="Phone Number" value="{{ user_info.phone_number }}">
-                <button type="submit">💾 Save</button>
-            </form>
+            <div>
+                <input type="text" placeholder="First Name" value="{{ user_info.first_name }}" id="first_name">
+                <input type="text" placeholder="Middle Name" value="{{ user_info.middle_name }}" id="middle_name">
+                <input type="text" placeholder="Last Name" value="{{ user_info.last_name }}" id="last_name">
+                <input type="number" placeholder="Id Number" value="{{ user_info.id_number }}" id="id_number">
+                <input type="email" placeholder="Email Address" value="{{ user_info.email_address }}" id="email_address">
+                <input type="number" placeholder="Phone Number" value="{{ user_info.phone_number }}" id="phone_number">
+                <button type="submit" onclick="save_user_info()" type="button">💾 Save</button>
+            </div>
         </div>
 
         <!-- Address Information -->
