--- a/basroba/app/static/css/profile.css
+++ b/basroba/app/static/css/profile.css
@@ -73,7 +73,7 @@ body {
 
 /* === INPUTS === */
 input {
-    width: 100%;
+    width: 90%;
     padding: 12px 16px;
     margin-bottom: 16px;
     border-radius: 12px;
@@ -202,4 +202,37 @@ button:hover {
     button {
         font-size: 13px;
     }
+}
+
+
+.container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 10000;
+}
+
+.container-back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(4px);
+}
+
+.container-front {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #1a1a1a;
+    padding: 30px;
+    border-radius: 16px;
+    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
+    width: 90%;
+    max-width: 400px;
 }
