--- a/basroba/app/static/css/profile.css
+++ b/basroba/app/static/css/profile.css
@@ -233,6 +233,7 @@ button:hover {
     padding: 30px;
     border-radius: 16px;
     box-shadow: 0 8px 25px rgba(0, 0, 0, 0.5);
-    width: 90%;
-    max-width: 400px;
+    width: 80%;
+    height: 70%;
+    overflow-y: auto;
 }
