--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -12,16 +12,16 @@
     <div class="container-back"></div>
     <div class="container-front">
         <h1>Add Address</h1>
-        <input type="text" placeholder="First Name" id="first_name2" value="{{ user_info.first_name }}">
-        <input type="text" placeholder="Last Name" id="last_name2" value="{{ user_info.last_name }}">
-        <input type="number" placeholder="Phone Number" id="phone_number2" value="{{ user_info.phone_number }}">
-        <input type="text" placeholder="Street Address 1" id="street_address1" value="{{ user_info.street_address1 }}">
-        <input type="text" placeholder="Street Address 2" id="street_address2" value="{{ user_info.street_address2 }}">
-        <input type="text" placeholder="City" id="city" value="{{ user_info.city }}">
-        <input type="text" placeholder="State/Region" id="state_region" value="{{ user_info.State_Region }}">
-        <input type="number" placeholder="ZIP Code" id="zip_code" value="{{ user_info.ZIP_code }}">
-        <input type="text" placeholder="Country" id="country" value="{{ user_info.country }}">
-        <input type="number" placeholder="Phone Code" id="phone_code" value="{{ user_info.phone_code }}">
+        <input type="text" placeholder="First Name" id="first_name22" value="{{ user_info.first_name }}">
+        <input type="text" placeholder="Last Name" id="last_name22" value="{{ user_info.last_name }}">
+        <input type="number" placeholder="Phone Number" id="phone_number22" value="{{ user_info.phone_number }}">
+        <input type="text" placeholder="Street Address 1" id="street_address122" value="{{ user_info.street_address1 }}">
+        <input type="text" placeholder="Street Address 2" id="street_address222" value="{{ user_info.street_address2 }}">
+        <input type="text" placeholder="City" id="city22" value="{{ user_info.city }}">
+        <input type="text" placeholder="State/Region" id="state_region22" value="{{ user_info.State_Region }}">
+        <input type="number" placeholder="ZIP Code" id="zip_code22" value="{{ user_info.ZIP_code }}">
+        <input type="text" placeholder="Country" id="country22" value="{{ user_info.country }}">
+        <input type="number" placeholder="Phone Code" id="phone_code22" value="{{ user_info.phone_code }}">
         <button type="submit" onclick="add_address()" type="button">💾 Save</button>
     </div>
 </div>
