--- a/basroba/app/templates/profile.html
+++ b/basroba/app/templates/profile.html
@@ -8,8 +8,8 @@
 {% block title %}My Profile{% endblock %}
 
 {% block body %}
-<div class="container">
-    <div class="container-back"></div>
+<div class="container" id="address-form" style="display: none;">
+    <div class="container-back" id="address-form-back"></div>
     <div class="container-front">
         <h1>Add Address</h1>
         <input type="text" placeholder="First Name" id="first_name22" value="{{ user_info.first_name }}">
@@ -53,7 +53,7 @@
         <!-- Address Information -->
         <div class="main-part2 card" id="main-part2" style="display: none;">
             <h1>Address Information</h1>
-            <button type="button" class="add-address">➕ Add Address</button>
+            <button type="button" class="add-address" onclick="open_address_form()">➕ Add Address</button>
 
             {% for address in address_info %}
                 <div class="address-div" id="address-{{ address.id }}">
